# corrosion-hello

./: .gitignore  CMakeLists.txt  README.md  main.c
hello_rs/: .gitignore  Cargo.toml  build.rs  cbindgen.toml
hello_rs/include/: hello.h
hello_rs/src/: lib.rs
